fix proposal inline row spacing

--- a/src/adhocracy/static_src/stylesheets/widgets/_proposal.scss
+++ b/src/adhocracy/static_src/stylesheets/widgets/_proposal.scss
@@ -11,12 +11,11 @@ ul.papers_list {
 }
 
 .proposals_pager {
-    .content_box {
-        @include clearfix;
+    .main_row {
+        @include pie-clearfix;
 
         > div {
             float: left;
-            margin-bottom: 0.5em;
         }
     }
     .showhide_button {
@@ -28,6 +27,7 @@ ul.papers_list {
         }
     }
     .proposal {
+        margin-top: 0.5em;
         padding: 1.5em;
         clear: both;
 
